= 1.1.1
  * updated carrierwave
= 1.0.8
  * added option to pass query string parameters
= 1.0.7
  * added option to generate urls for blobsterix in a protocol relative way(i.e "//" instead of "http/https://")
= 1.0.6
  * fixing bug that caused to many processors to fire
= 1.0.0
  * updated fog and carrierwave.
  BREAKING CHANGES:
    * in case you used the uploader version patch before you have to now include the patches/carrierwave_0100_... version of the patch.
= 0.0.9
 * made the version name change optional. found in patches folder
= 0.0.8
 * changed uploaded version class naming. So they can be recreated from sessions.(needs to be changed when switching carrierwave version!!)
= 0.0.7
 * something
= 0.0.6
 * just version bump
= 0.0.5
 * adding resize_max
 * renaming scale to resize
= 0.0.4
 * fixing scale options
= 0.0.3
 * first rc